# mav-soaring

./: Makefile  README.md  dependencies.rosinstall  setup.bash
.github/workflows/: build_test.yml  check_style.yml
Tools/: run_test.sh
ergodic_soaring/: CMakeLists.txt  package.xml
ergodic_soaring/include/ergodic_soaring/: ergodic_controller.h  ergodic_soaring.h  fourier_coefficient.h
ergodic_soaring/launch/: config.rviz  sitl_ergodic_soaring.launch  test_ergodic_control.launch  test_ergodic_gradient.launch  test_ergodic_map.launch  test_ergodic_trajectory.launch
ergodic_soaring/src/: ergodic_controller.cpp  ergodic_soaring.cpp  ergodic_soaring_node.cpp  fourier_coefficient.cpp  test_ergodic_control_node.cpp  test_ergodic_map_node.cpp  test_ergodic_trajectory_node.cpp
ergodic_soaring/test/: test_ergodiccontrol.cpp
gazebo_soaring_plugins/: CMakeLists.txt  package.xml
gazebo_soaring_plugins/include/: gazebo_thermal_plugin.h
gazebo_soaring_plugins/src/: gazebo_thermal_plugin.cpp
gazebo_thermal_plugin/: CMakeLists.txt  package.xml
gazebo_thermal_plugin/src/: gazebo_thermal_plugin.cpp
hilbert_mapper/: CMakeLists.txt  package.xml
hilbert_mapper/include/hilbert_mapper/: hilbert_mapper.h  hilbertmap.h
hilbert_mapper/launch/: euroc_dataset.launch  hilbert_mapper.launch  hilbertmap_rotors_sim.launch  test_hilbert_mapper.launch
hilbert_mapper/src/: hilbert_mapper.cpp  hilbert_mapper_node.cpp  hilbertmap.cpp
mav_soaring/: CMakeLists.txt  package.xml
mav_soaring/sim/models/techpod/: techpod.sdf
soaring_msgs/: CMakeLists.txt  package.xml
soaring_msgs/msg/: ThermalEstimatorStatus.msg
thermal_soaring/: CMakeLists.txt  package.xml
thermal_soaring/include/thermal_soaring/: thermal_detector.h  thermal_estimator.h  thermal_soaring.h
thermal_soaring/launch/: sitl_thermal_soaring.launch
thermal_soaring/src/: thermal_detector.cpp  thermal_estimator.cpp  thermal_soaring.cpp  thermal_soaring_node.cpp
thermal_soaring/test/: thermal_detector-test.cpp  thermal_estimator-test.cpp
