<package>
  <name>mav_soaring</name>
  <version>0.0.1</version>
  <description>Ros package enabling autonomous MAVs</description>

  <maintainer email="jaeyoung@auterion.com">Jaeyoung Lim</maintainer>

  <author>Jaeyoung Lim</author>

  <license>BSD-3</license>

  <url type="website">https://github.com/Jaeyoung-Lim/mav_soaring</url>
  <url type="bugtracker">https://github.com/Jaeyoung-Lim/mav_soaring/issues</url>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
